Fix info not showing in smaller screens
My first Pull Request ever :)

--- a/server/fishtest/static/css/application.css
+++ b/server/fishtest/static/css/application.css
@@ -67,6 +67,7 @@ body {
   overflow: hidden scroll;
   height: 100vh;
   width: 100%;
+  display: inline-table;
 }
 
 .contentbase main > h2 {
